<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MarginAll"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MarginAll">

        <ImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="170dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_title"
            style="@style/TextContent.HeadlineMedium.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_detail_photo"
            tools:text="@string/anime_title" />

        <TextView
            android:id="@+id/tv_episode"
            style="@style/TextContent.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            android:text="@string/anime_episode" />

        <TextView
            android:id="@+id/tv_detail_episode"
            style="@style/TextContent.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_episode"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            tools:text="@string/anime_episode" />

        <TextView
            android:id="@+id/tv_aired"
            style="@style/TextContent.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_episode"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            android:text="@string/anime_aired" />

        <TextView
            android:id="@+id/tv_detail_aired"
            style="@style/TextContent.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_aired"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            tools:text="@string/anime_aired" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/TextContent.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_aired"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            android:text="@string/anime_status" />

        <TextView
            android:id="@+id/tv_detail_status"
            style="@style/TextContent.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_status"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            app:layout_constraintStart_toEndOf="@+id/img_detail_photo"
            tools:text="@string/anime_status" />

        <View
            android:id="@+id/divider_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_photo"
            app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_title" />

        <LinearLayout
            android:id="@+id/layout_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
            app:layout_constraintStart_toStartOf="@+id/divider_top"
            app:layout_constraintTop_toBottomOf="@+id/divider_top">

            <TextView
                android:id="@+id/tv_score"
                style="@style/TextContent.TitleMedium"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/anime_score"
                tools:text="@string/anime_score" />

            <TextView
                android:id="@+id/tv_popularity"
                style="@style/TextContent.TitleMedium"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/anime_popularity"
                tools:text="@string/anime_popularity" />

            <TextView
                android:id="@+id/tv_ranked"
                style="@style/TextContent.TitleMedium"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/anime_ranked"
                tools:text="@string/anime_ranked" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_detail_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="@+id/layout_rate"
            app:layout_constraintStart_toStartOf="@+id/layout_rate"
            app:layout_constraintTop_toBottomOf="@+id/layout_rate">

            <TextView
                android:id="@+id/tv_detail_score"
                style="@style/TextContent.TitleMedium"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                tools:text="@string/anime_score" />

            <TextView
                android:id="@+id/tv_detail_popularity"
                style="@style/TextContent.TitleMedium"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                tools:text="@string/anime_popularity" />

            <TextView
                android:id="@+id/tv_detail_ranked"
                style="@style/TextContent.TitleMedium"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                tools:text="@string/anime_ranked" />
        </LinearLayout>

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@+id/layout_detail_rate"
            app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
            />


        <TextView
            android:id="@+id/tv_synopsis"
            style="@style/TextContent.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/divider_bottom"
            app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
            android:text="@string/anime_synopsis"
            tools:text="@string/anime_synopsis" />

        <TextView
            android:id="@+id/tv_detail_synopsis"
            style="@style/TextContent.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis"
            app:layout_constraintStart_toStartOf="@+id/img_detail_photo"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
            tools:text="@string/anime_synopsis" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>